resolved overlapping issue of mic and search icon

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 
 :root {
     --apppink: rgb(255, 136, 231);
@@ -250,9 +249,6 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   outline: none !important;
 }
-#i{
-    /* visibility: hidden; */
-}
 #box {
   position: fixed !important;
   top: 20%;
@@ -266,10 +262,6 @@ h1, h2, h3, h4, h5, h6 {
 #box:hover > #search-txt {
   width: 240px;
   padding: 0 6px;
-}
-#box:hover > #i {
-    /* display: block; */
-    visibility: visible;
 }
 #box:hover > .searchbtn {
   background: #0bd54f;
@@ -310,9 +302,9 @@ h1, h2, h3, h4, h5, h6 {
     
 }
 #numberfact{
-    font-family: 'Berkshire Swash', cursive;
+    font-family: mainfont;
     letter-spacing: 2px;
-    font-size: 25px;
+    font-size: 15px;
     text-align: center !important;
     margin-top: auto;
     margin-bottom: auto;
